--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "bigint arithmetic and secp256k1 ecc operations in circom",
   "main": "index.js",
   "scripts": {
-    "build": "./build_circuits.sh"
+    "build": "./build_circuits.sh",
+    "test": "mocha -r ts-node/register 'test/**/*.ts'"
   },
   "repository": "git@github.com:0xPARC/circom-secp256k1.git",
   "author": "0xPARC <hello@0xparc.org>",
@@ -12,5 +13,14 @@
   "dependencies": {
     "circomlib": "^2.0.2",
     "snarkjs": "^0.4.10"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^9.0.0",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
