--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/chai": "^4.3.0",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^9.0.0",
+    "circom_tester": "0.0.9",
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
     "ts-node": "^10.4.0",
