--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "./build_circuits.sh",
     "build_verify": "./build_verify.sh",
-    "test": "mocha -r ts-node/register 'test/**/*.ts'"
+    "test": "NODE_OPTIONS=--max_old_space_size=56000 mocha -r ts-node/register 'test/**/*.ts'"
   },
   "repository": "git@github.com:0xPARC/circom-secp256k1.git",
   "author": "0xPARC <hello@0xparc.org>",
