--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
   "scripts": {
     "build": "./build_circuits.sh",
     "build_verify": "./build_verify.sh",
-    "test": "NODE_OPTIONS=--max_old_space_size=56000 mocha -r ts-node/register 'test/**/*.ts'"
+    "test": "NODE_OPTIONS=--max_old_space_size=56000 mocha -r ts-node/register 'test/**/*.ts'",
+    "groupsig": "npx ts-node scripts/groupsign.ts"
   },
   "repository": "git@github.com:0xPARC/circom-secp256k1.git",
   "author": "0xPARC <hello@0xparc.org>",
   "license": "ISC",
   "dependencies": {
     "circomlib": "^2.0.2",
+    "ethers": "^5.5.2",
     "snarkjs": "^0.4.10"
   },
   "devDependencies": {
+    "@noble/secp256k1": "1.3.4",
     "@types/chai": "^4.3.0",
     "@types/expect": "^24.3.0",
     "@types/mocha": "^9.0.0",
-    "@noble/secp256k1": "1.3.4",
-    "circom_tester": "0.0.9",
     "chai": "^4.3.4",
+    "circom_tester": "0.0.9",
     "mocha": "^9.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
