eth_addr: Add demo circuit

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:pubkeygen": "cd ./scripts/pubkeygen && ./build_pubkeygen.sh",
     "build:groupsig": "cd ./scripts/groupsig && ./build_groupsig.sh",
     "build:verify": "cd ./scripts/verify && ./build_verify.sh",
+    "build:eth_addr": "cd ./scripts/eth_addr && ./build_eth_addr.sh",
     "test": "NODE_OPTIONS=--max_old_space_size=56000 mocha -r ts-node/register 'test/**/*.ts'",
     "groupsig-demo": "npx ts-node scripts/groupsign_cli.ts"
   },
