--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "circomlib": "^2.0.2",
     "ethers": "^5.5.2",
-    "snarkjs": "^0.4.10"
+    "ffjavascript": "^0.2.51",
+    "snarkjs": "^0.4.15"
   },
   "devDependencies": {
     "@noble/secp256k1": "1.3.4",
